--- a/frontend/style.css
+++ b/frontend/style.css
@@ -68,3 +68,19 @@ button:hover {
     font-weight: 600;
     line-height: 1.5;
 }
+
+footer {
+    margin-top: 40px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    text-align: left;
+    max-width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'JetBrains Mono', monospace;
+}
+
+footer a {
+    text-decoration: underline;
+    color: #000000;
+}
